# QtReport

./: .cproject  .directory  .gitignore  .project  CMakeLists.txt  Doxyfile  QtReport.pro  QtReport.pro.user.5f7c3c1  README.md  move
.kdev4/: QtReport.kdev4
QtReport/: .directory  .qreportdocumentdesigner.cpp.swp  .qreportxmlseriazble.cpp.swp  QtReport.pro  main.dox  qreport.cpp  qreport.h  qreportband.h  qreportcolorpicker.cpp  qreportdatabaseinfodialog.cpp  qreportdatabaseinfodialog.h  qreportdatabaseinfodialog.ui  qreportdatabasetablesdialog.cpp  qreportdatabasetablesdialog.h  qreportdatabasetablesdialog.ui  qreportdatatable.cpp  qreportdatatable.h  qreportdesigneraboutdialog.cpp  qreportdesigneraboutdialog.h  qreportdesignerfactory.h  qreportdesignerwindow.cpp  qreportdesignerwindow.h  qreportdisplaybase.cpp  qreportdisplaybase.h  qreportdocpage.h  qreportdocumentdesigner.cpp  qreportdocumentview.h  qreportevent.h  qreportimage.cpp  qreportimage.h  qreportlinebase.cpp  qreportparametere.cpp  qreportparameteredialog.cpp  qreportparameteredialog.ui  qreportpropertyband.cpp  qreportpropertydialog.h  qreportpropertyfilter.cpp  qreportpropertyfilter.h  qreportpropertyfilter.ui  qreportpropertypagealign.cpp  (+44 more)
QtReport/fonts/: .directory
QtReportDesigner/: .directory  Makefile  QtReportDesigner.pro  main.cpp
app/: CMakeLists.txt  win.rc
lib/: CMakeLists.txt  QtReport  resources.qrc  typehelper.cpp  typehelper.h
lib/core/: dataconnection.cpp  dataconnection.h  datatable.cpp  document.cpp  parametere.h  report.cpp  report.h  reportdatamodel.cpp  reportdatamodel.h  reportprintsettings.h  variable.h
lib/designer/: databaseinfodialog.cpp  databaseinfodialog.ui  databasetablesdialog.cpp  databasetablesdialog.h  datatabledialog.cpp  designeraboutdialog.h  designerfactory.cpp  designerfactory.h  designerwindow.cpp  docpage.h  documentdesigner.cpp  documentdesigner.h  documentview.cpp  documentview.h  modeltreeview.cpp  newconnectionwizard.h  newconnectionwizard.ui  parameteredialog.cpp  parameteredialog.h  parameteredialog.ui  querybuilderdialog.cpp  querybuilderdialog.ui  seriazbleobject.h  treemanager.cpp  undocommands.cpp  widgetresizer.cpp  widgetresizer_p.h
lib/propertypages/: propertyband.cpp  propertyband.h  propertydialog.cpp  propertydialog.h  propertyfilter.cpp  propertyfilter.h  propertypagealign.h  propertypagealign.ui  propertypagefont.h  propertypageformat.cpp  propertypageformat.h  propertypagelinetype.cpp  propertypagelinetype.h  propertypagepage.cpp  propertypagepage.h  propertypagepage.ui  propertypagepos.cpp  propertypagerectangle.cpp  propertypagerectangle.ui  propertypagerichtext.h  propertypagetext.cpp  propertypagetext.ui  propertypagewidget.h  propertysort.ui  propertytext.cpp  propertytext.h  sectiondataproperties.h  sectionsproperties.cpp  sectionsproperties.ui
lib/resources/: gpl2
lib/widgets/: band.cpp  displaybase.cpp  displaybase.h  horizontalline.h  image.cpp  image.h  linebase.h  panel.cpp  verticalline.cpp  verticalline.h  widget.cpp  widgetbase.cpp  widgetbase.h
src/: Makefile  QtReport  QtReport.pro  colorpicker.cpp  databaseinfodialog.cpp  databasetablesdialog.cpp  databasetablesdialog.h  databasetablesdialog.ui  datatable.cpp  datatable.h  datatabledialog.cpp  designeraboutdialog.cpp  designerfactory.cpp  designerwindow.ui  displaybase.cpp  displaybase.h  docpage.cpp  docpage.h  documentdesigner.cpp  documentdesigner.h  lreportdatamodel.cpp  lreportdatamodel.h  move  newconnectionwizard.cpp  parameteredialog.cpp  parameteredialog.h  qreport.cpp  qreport.h  qreportband.cpp  qreportband.h  qreportcolorpicker.cpp  qreportcolorpicker.h  qreportdatabaseinfodialog.cpp  qreportdatabaseinfodialog.h  qreportdatabaseinfodialog.ui  qreportdatabasetablesdialog.cpp  qreportdatabasetablesdialog.h  qreportdatabasetablesdialog.ui  qreportdataconnection.cpp  qreportdataconnection.h  (+97 more)
src/core/: dataconnection.cpp  dataconnection.h  datatable.h  document.cpp  document.h  event.h  lreportprintsettings.cpp  lreportprintsettings.h  parametere.cpp  parametere.h  report.cpp  report.h  reportmodel.cpp  reportmodel.h  reportprintsettings.cpp  variable.cpp  variable.h
src/designer/: databaseinfodialog.cpp  databaseinfodialog.h  databaseinfodialog.ui  databasetablesdialog.cpp  databasetablesdialog.h  databasetablesdialog.ui  datatabledialog.cpp  datatabledialog.h  datatabledialog.ui  designer.pro  designeraboutdialog.cpp  designeraboutdialog.h  designerfactory.cpp  designerfactory.h  designerwindow.cpp  designerwindow.h  docpage.cpp  documentdesigner.cpp  documentdesigner.h  documentview.cpp  documentview.h  modeltreeview.cpp  modeltreeview.h  parameteredialog.cpp  parameteredialog.h  parameteredialog.ui  querybuilderdialog.cpp  querybuilderdialog.h  querybuilderdialog.ui  ruler.cpp  ruler.h  scene.cpp  scene.h  seriazbleobject.cpp  treemanager.cpp  treemanager.h  undocommands.cpp  undocommands.h  widgetresizer.cpp  widgetresizer_p.h
src/propertypages/: propertyband.cpp  propertyband.h  propertydialog.cpp  propertyfilter.cpp  propertyfilter.h  propertyfilter.ui  propertypagealign.cpp  propertypagealign.h  propertypagebarcode.cpp  propertypagebarcode.h  propertypagebase.cpp  propertypagebase.h  propertypagefont.cpp  propertypagefont.h  propertypageformat.cpp  propertypageformat.h  propertypageimage.cpp  propertypageimage.h  propertypageimage.ui  propertypagelinetype.cpp  propertypagelinetype.h  propertypagepage.cpp  propertypagepage.h  propertypagepage.ui  propertypagepos.cpp  propertypagepos.h  propertypagerectangle.cpp  propertypagerectangle.h  propertypagerichtext.cpp  propertypagerichtext.h  propertypagerichtext.ui  propertypagetext.cpp  propertypagetext.h  propertypagetext.ui  propertypagewidget.cpp  propertypagewidget.h  propertypagewidget.ui  propertysort.cpp  propertysort.h  propertytext.h  (+49 more)
src/resources/: .directory
src/widgets/: band.cpp  band.h  displaybase.h  horizontalline.cpp  horizontalline.h  image.cpp  image.h  linebase.cpp  linebase.h  panel.cpp  panel.h  qreportband.cpp  qreportband.h  qreporthorizontalline.h  (+27 more)
translations/: qtreport_en.ts
(+2 files in other folders)
